--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">Assalamualaikum Hamba Allah di</div>
+                <div class="masthead-subheading">Assalamualaikum Hamba Allah</div>
                 <div class="masthead-heading text-uppercase">PONPES YATIM AL-HANIF</div>
                 <a class="btn btn-primary btn-xl text-uppercase" href="#services">TABAYYUN</a>
             </div>
