--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
         <section class="page-section bg-light" id="portfolio">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Portfolio</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading text-uppercase">PROGRAM UNGGULAN</h2>
+                    <h3 class="section-subheading text-muted">Program Pendidikan dan Pembinaan Santri Yatim di Pondok Pesantren Al-Hanif</h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-4 col-sm-6 mb-4">
@@ -97,8 +97,8 @@
                                 <img class="img-fluid" src="assets/img/portfolio/1.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Threads</div>
-                                <div class="portfolio-caption-subheading text-muted">Illustration</div>
+                                <div class="portfolio-caption-heading">Tahfidz Al-Qur'an</div>
+                                <div class="portfolio-caption-subheading text-muted">Program hafalan Al-Qur’an dengan pembimbing ustadz berpengalaman</div>
                             </div>
                         </div>
                     </div>
@@ -112,8 +112,8 @@
                                 <img class="img-fluid" src="assets/img/portfolio/2.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Explore</div>
-                                <div class="portfolio-caption-subheading text-muted">Graphic Design</div>
+                                <div class="portfolio-caption-heading">Pendidikan Tsanawiyah</div>
+                                <div class="portfolio-caption-subheading text-muted">Pendidikan tingkat menengah pertama yang mengintegrasikan ilmu agama dan umum</div>
                             </div>
                         </div>
                     </div>
@@ -127,8 +127,8 @@
                                 <img class="img-fluid" src="assets/img/portfolio/3.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Finish</div>
-                                <div class="portfolio-caption-subheading text-muted">Identity</div>
+                                <div class="portfolio-caption-heading">Pendidikan Aliyah</div>
+                                <div class="portfolio-caption-subheading text-muted">Pendidikan tingkat menengah atas dengan penguatan akidah, akhlak, dan keilmuan</div>
                             </div>
                         </div>
                     </div>
@@ -142,8 +142,8 @@
                                 <img class="img-fluid" src="assets/img/portfolio/4.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Lines</div>
-                                <div class="portfolio-caption-subheading text-muted">Branding</div>
+                                <div class="portfolio-caption-heading">Asrama Santri</div>
+                                <div class="portfolio-caption-subheading text-muted">Pembinaan adab, kemandirian, dan disiplin santri dalam kehidupan sehari-hari</div>
                             </div>
                         </div>
                     </div>
@@ -157,8 +157,8 @@
                                 <img class="img-fluid" src="assets/img/portfolio/5.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Southwest</div>
-                                <div class="portfolio-caption-subheading text-muted">Website Design</div>
+                                <div class="portfolio-caption-heading">Kegiatan Keagamaan</div>
+                                <div class="portfolio-caption-subheading text-muted">Shalat berjamaah, dzikir, dan kajian rutin</div>
                             </div>
                         </div>
                     </div>
@@ -172,8 +172,8 @@
                                 <img class="img-fluid" src="assets/img/portfolio/6.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Window</div>
-                                <div class="portfolio-caption-subheading text-muted">Photography</div>
+                                <div class="portfolio-caption-heading">Pelatihan Keterampilan</div>
+                                <div class="portfolio-caption-subheading text-muted">Pembekalan keterampilan untuk kemandirian santri di masa depan</div>
                             </div>
                         </div>
                     </div>
