--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/1.jpeg" alt="..." />
+                                <img class="img-fluid" src="assets/img/portfolio/1.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Tahfidz Al-Qur'an</div>
@@ -397,23 +397,24 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                    <h2 class="text-uppercase">Program Tahfidz Qur'an</h2>
+                                    <p class="item-intro text-muted">Program pembinaan dan pendidikan santri di Pondok Pesantren Yatim Al-Hanif</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/1.jpg" alt="..." />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <p>Program Tahfidz Al-Qur’an merupakan program unggulan Pondok Pesantren Yatim Al-Hanif yang bertujuan membentuk santri yang cinta Al-Qur’an serta memiliki hafalan yang kuat dan berakhlak mulia.</p>
                                     <ul class="list-inline">
                                         <li>
-                                            <strong>Client:</strong>
-                                            Threads
+                                            <strong>Fokus Program :</strong>
                                         </li>
                                         <li>
-                                            <strong>Category:</strong>
-                                            Illustration
+                                            •Bimbingan ustadz berpengalaman  
+                                            • Setoran hafalan rutin  
+                                            • Muraja’ah harian  
+                                            • Pembinaan adab dan akhlak•
                                         </li>
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-xmark me-1"></i>
-                                        Close Project
+                                        Tutup
                                     </button>
                                 </div>
                             </div>
