--- a/index.html
+++ b/index.html
@@ -406,10 +406,7 @@
                                             <strong>Fokus Program :</strong>
                                         </li>
                                         <li>
-                                            •Bimbingan ustadz berpengalaman  
-                                            • Setoran hafalan rutin  
-                                            • Muraja’ah harian  
-                                            • Pembinaan adab dan akhlak•
+                                            • Bimbingan ustadz berpengalaman • Setoran hafalan rutin • Muraja’ah harian • Pembinaan adab & akhlak •
                                         </li>
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
@@ -433,23 +430,21 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                    <h2 class="text-uppercase">Pendidikan Tsanawiyah (MTs)</h2>
+                                    <p class="item-intro text-muted">Program pembinaan dan pendidikan santri di Pondok Pesantren Yatim Al-Hanif</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/2.jpg" alt="..." />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <p>Pendidikan Tsanawiyah di Pondok Pesantren Al-Hanif memadukan kurikulum pendidikan menengah pertama dengan penguatan ilmu agama dan karakter Islami.</p>
                                     <ul class="list-inline">
                                         <li>
-                                            <strong>Client:</strong>
-                                            Explore
+                                            <strong>Tujuan Program:</strong>
                                         </li>
                                         <li>
-                                            <strong>Category:</strong>
-                                            Graphic Design
+                                            • Ilmu umum dan agama seimbang • Pembinaan akhlak santri • Lingkungan pesantren yang kondusif •
                                         </li>
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-xmark me-1"></i>
-                                        Close Project
+                                        Tutup
                                     </button>
                                 </div>
                             </div>
@@ -468,18 +463,16 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                    <h2 class="text-uppercase">Pendidikan Aliyah (MA)</h2>
+                                    <p class="item-intro text-muted">Program pembinaan dan pendidikan santri di Pondok Pesantren Yatim Al-Hanif</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/3.jpg" alt="..." />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <p>Pendidikan Aliyah ditujukan untuk membekali santri dengan ilmu pengetahuan, pemahaman agama yang mendalam, serta kesiapan melanjutkan pendidikan ke jenjang yang lebih tinggi.</p>
                                     <ul class="list-inline">
                                         <li>
-                                            <strong>Client:</strong>
-                                            Finish
+                                            <strong>Tujuan Program::</strong>
                                         </li>
                                         <li>
-                                            <strong>Category:</strong>
-                                            Identity
+                                            • Pendalaman ilmu agama • Pembinaan mental & spiritual • Persiapan masa depan santri •
                                         </li>
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
@@ -503,18 +496,17 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                    <h2 class="text-uppercase">Pembinaan Asrama & Karakter Santri</h2>
+                                    <p class="item-intro text-muted">Program pembinaan dan pendidikan santri di Pondok Pesantren Yatim Al-Hanif.</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/4.jpg" alt="..." />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <p>Santri dibina dalam kehidupan berasrama untuk membentuk karakter mandiri, disiplin, tanggung jawab, serta akhlak yang baik sesuai nilai-nilai Islam.</p>
                                     <ul class="list-inline">
                                         <li>
-                                            <strong>Client:</strong>
-                                            Lines
+                                            <strong>Cakupan Pembinaan:</strong>
                                         </li>
                                         <li>
-                                            <strong>Category:</strong>
-                                            Branding
+                                            • Kedisiplinan harian • Kemandirian santri • Pembinaan adab & etika •
+
                                         </li>
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
