--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
             <div class="container">
                 <a class="navbar-brand" href="#page-top"><img class="navbar-logo" src="assets/img/alhanif-name.jpg" alt="..." /></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    Menu nyah sayang
+                    Menu
                     <i class="fas fa-bars ms-1"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#services">Tentang Kami</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#portfolio">Program</a></li>
                         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
@@ -243,49 +243,39 @@
             </div>
         </section>
         <!-- Team-->
-        <section class="page-section bg-light" id="team">
-            <div class="container">
-                <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-                </div>
-                <div class="row">
-                    <div class="col-lg-4">
-                        <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/1.jpg" alt="..." />
-                            <h4>Parveen Anand</h4>
-                            <p class="text-muted">Lead Designer</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand Twitter Profile"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand Facebook Profile"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/2.jpg" alt="..." />
-                            <h4>Diana Petersen</h4>
-                            <p class="text-muted">Lead Marketer</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen Twitter Profile"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen Facebook Profile"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="..." />
-                            <h4>Larry Parker</h4>
-                            <p class="text-muted">Lead Developer</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Twitter Profile"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Facebook Profile"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p></div>
-                </div>
-            </div>
-        </section>
+        <div class="row text-center">
+    <div class="col-lg-3 col-md-6">
+        <div class="team-member">
+            <img class="mx-auto rounded-circle" src="assets/img/team/1.jpg" alt="..." />
+            <h4>KH Ahmad Jazuli</h4>
+            <p class="text-muted">Pimpinan Pondok Pesantren Yatim Al-Hanif</p>
+        </div>
+    </div>
+
+    <div class="col-lg-3 col-md-6">
+        <div class="team-member">
+            <img class="mx-auto rounded-circle" src="assets/img/team/2.jpg" alt="..." />
+            <h4>Ustzh Mailan Nuryatin S,E.</h4>
+            <p class="text-muted">Bendahara Ponpes Yatim Al-Hanif</p>
+        </div>
+    </div>
+
+    <div class="col-lg-3 col-md-6">
+        <div class="team-member">
+            <img class="mx-auto rounded-circle" src="assets/img/team/4.jpg" alt="..." />
+            <h4>Ust Abdul Gofur S,Pd,I.</h4>
+            <p class="text-muted">Kepala Madrasah Tsanawiyah</p>
+        </div>
+    </div>
+
+    <div class="col-lg-3 col-md-6">
+        <div class="team-member">
+            <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="..." />
+            <h4>Ustzh Zulfana S,Si.</h4>
+            <p class="text-muted">Kepala Madrasah Aliyah</p>
+        </div>
+    </div>
+</div>
         <!-- Clients-->
         <div class="py-5">
             <div class="container">
@@ -477,7 +467,7 @@
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-xmark me-1"></i>
-                                        Close Project
+                                        Tutup
                                     </button>
                                 </div>
                             </div>
@@ -511,7 +501,7 @@
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-xmark me-1"></i>
-                                        Close Project
+                                        Tutup
                                     </button>
                                 </div>
                             </div>
@@ -530,23 +520,21 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                    <h2 class="text-uppercase">Kegiatan Keagamaan Santri</h2>
+                                    <p class="item-intro text-muted">Program pembinaan dan pendidikan santri di Pondok Pesantren Yatim Al-Hanif</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/5.jpg" alt="..." />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <p>Kegiatan keagamaan dilaksanakan secara rutin untuk menanamkan nilai keimanan, kedisiplinan, serta kebiasaan ibadah dalam kehidupan sehari-hari santri.</p>
                                     <ul class="list-inline">
                                         <li>
-                                            <strong>Client:</strong>
-                                            Southwest
+                                            <strong>Kegiatan Utama:</strong>
                                         </li>
                                         <li>
-                                            <strong>Category:</strong>
-                                            Website Design
+                                            • Shalat berjamaah • Dzikir & doa bersama • Kajian rutin •
                                         </li>
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-xmark me-1"></i>
-                                        Close Project
+                                        Tutup
                                     </button>
                                 </div>
                             </div>
@@ -565,23 +553,23 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                    <h2 class="text-uppercase">Ekstrakurikuler & Pelatihan Keterampilan Santri</h2>
+                                    <p class="item-intro text-muted">Kegiatan pengembangan minat, bakat, dan keterampilan santri</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/6.jpg" alt="..." />
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                    <p>Ekstrakurikuler di Pondok Pesantren Yatim Al-Hanif merupakan bagian dari pembinaan santri dalam mengembangkan minat, 
+                                        bakat, serta keterampilan non-akademik. Kegiatan ini bertujuan untuk membentuk santri yang aktif, disiplin, percaya diri, 
+                                        serta mampu bekerja sama dalam kebersamaan dan nilai-nilai keislaman.</p>
                                     <ul class="list-inline">
                                         <li>
-                                            <strong>Client:</strong>
-                                            Window
+                                            <strong>Program:</strong>
                                         </li>
                                         <li>
-                                            <strong>Category:</strong>
-                                            Photography
+                                            • Pramuka • Hadroh • Marawis • Qasidah • Tari Tradisonal • Futsal • PMR (Palang Merah Remaja) •
                                         </li>
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-xmark me-1"></i>
-                                        Close Project
+                                        Tutup
                                     </button>
                                 </div>
                             </div>
