--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <li class="nav-item"><a class="nav-link" href="#services">Tentang Kami</a></li>
                         <li class="nav-item"><a class="nav-link" href="#portfolio">Program</a></li>
                         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#team">Struktur</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                     </ul>
                 </div>
@@ -243,20 +243,23 @@
             </div>
         </section>
         <!-- Team-->
+         <section class="page-section bg-light" id="team"> <div class="container"> <div class="text-center"> 
+            <h2 class="section-heading text-uppercase">Struktur Kepengurusan</h2> 
+            <h3 class="section-subheading text-muted">Pimpinan dan pengelola Pondok Pesantren Yatim Al-Hanif</h3>
         <div class="row text-center">
     <div class="col-lg-3 col-md-6">
         <div class="team-member">
             <img class="mx-auto rounded-circle" src="assets/img/team/1.jpg" alt="..." />
             <h4>KH Ahmad Jazuli</h4>
-            <p class="text-muted">Pimpinan Pondok Pesantren Yatim Al-Hanif</p>
+            <p class="text-muted">Pimpinan PonPes Yatim Al-Hanif</p>
         </div>
     </div>
 
     <div class="col-lg-3 col-md-6">
         <div class="team-member">
             <img class="mx-auto rounded-circle" src="assets/img/team/2.jpg" alt="..." />
-            <h4>Ustzh Mailan Nuryatin S,E.</h4>
-            <p class="text-muted">Bendahara Ponpes Yatim Al-Hanif</p>
+            <h4>Ustzh Mailan S,E.</h4>
+            <p class="text-muted">Bendahara PonPes Yatim Al-Hanif</p>
         </div>
     </div>
 
