--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
                         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="#team">Struktur</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                        <li class="nav-item ms-lg-3">
+                             <a class="btn btn-daftar"
+                                href="https://docs.google.com/forms/d/e/1FAIpQLSel6VtF3R_mkex7UaCf9sLA9zKMfrS6jGv1-ycJbp69mKalGg/viewform?usp=dialog"
+                                target="_blank">
+                                PENDAFTARAN
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
