--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link" href="#services">Tentang Kami</a></li>
                         <li class="nav-item"><a class="nav-link" href="#portfolio">Program</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#about">History</a></li>
                         <li class="nav-item"><a class="nav-link" href="#team">Struktur</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#contact">Informasi</a></li>
                         <li class="nav-item ms-lg-3">
                              <a class="btn btn-daftar"
                                 href="https://docs.google.com/forms/d/e/1FAIpQLSel6VtF3R_mkex7UaCf9sLA9zKMfrS6jGv1-ycJbp69mKalGg/viewform?usp=dialog"
@@ -409,7 +409,7 @@
         <footer class="footer py-4">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-4 text-lg-start">Copyright &copy; Pondok Pesantren Yatim Al-Hanif 2026</div>
+                    <div class="col-lg-4 text-lg-start">Copyright &copy; 2026 Pondok Pesantren Yatim Al-Hanif</div>
                     <div class="col-lg-4 my-3 my-lg-0">
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
