--- a/index.html
+++ b/index.html
@@ -296,6 +296,52 @@
         </div>
     </div>
 </div>
+
+<!-- Alur Pendaftaran-->
+        <section class="page-section bg-light" id="pendaftaran">
+  <div class="container">
+    <div class="text-center">
+      <h2 class="section-heading text-uppercase">Alur Pendaftaran Santri</h2>
+      <h3 class="section-subheading text-muted">
+        Proses Pendaftaran Pondok Pesantren Yatim Al-Hanif
+      </h3>
+    </div>
+
+    <div class="row text-center mt-4">
+      <div class="col-md-4">
+        <div class="alur-box">
+          <i class="fas fa-edit fa-3x mb-3"></i>
+          <h4>Isi Formulir</h4>
+          <p>Calon santri mengisi formulir pendaftaran secara online & offline.</p>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="alur-box">
+          <i class="fas fa-check-circle fa-3x mb-3"></i>
+          <h4>Verifikasi Data</h4>
+          <p>Data akan diverifikasi oleh admin pondok.</p>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="alur-box">
+          <i class="fab fa-whatsapp fa-3x mb-3"></i>
+          <h4>Dihubungi Admin</h4>
+          <p>Admin akan menghubungi melalui WhatsApp.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="text-center mt-5">
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSel6VtF3R_mkex7UaCf9sLA9zKMfrS6jGv1-ycJbp69mKalGg/viewform?usp=dialog" target="_blank" class="btn btn-daftar btn-lg">
+        DAFTAR SEKARANG
+      </a>
+    </div>
+  </div>
+</section>
+
+
         <!-- Clients-->
         <div class="py-5">
             <div class="container">
@@ -315,6 +361,7 @@
                 </div>
             </div>
         </div>
+
         <!-- Contact-->
         <section class="page-section footer-pondok" id="contact">
             <div class="container">
