--- a/index.html
+++ b/index.html
@@ -32,12 +32,7 @@
                         <li class="nav-item"><a class="nav-link" href="#about">History</a></li>
                         <li class="nav-item"><a class="nav-link" href="#team">Struktur</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Informasi</a></li>
-                        <li class="nav-item ms-lg-3">
-                             <a class="btn btn-daftar"
-                                href="https://docs.google.com/forms/d/e/1FAIpQLSel6VtF3R_mkex7UaCf9sLA9zKMfrS6jGv1-ycJbp69mKalGg/viewform?usp=dialog"
-                                target="_blank">
-                                PENDAFTARAN
-                            </a>
+                        <li class="nav-item ms-lg-3"><a class="btn btn-daftar" href="#pendaftaran">PENDAFTARAN</a>
                         </li>
                     </ul>
                 </div>
@@ -119,7 +114,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/2.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Pendidikan Tsanawiyah</div>
+                                <div class="portfolio-caption-heading">Madrasah Tsanawiyah</div>
                                 <div class="portfolio-caption-subheading text-muted">Pendidikan tingkat menengah pertama yang mengintegrasikan ilmu agama dan umum</div>
                             </div>
                         </div>
@@ -134,7 +129,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/3.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Pendidikan Aliyah</div>
+                                <div class="portfolio-caption-heading">Madrasah Aliyah</div>
                                 <div class="portfolio-caption-subheading text-muted">Pendidikan tingkat menengah atas dengan penguatan akidah, akhlak, dan keilmuan</div>
                             </div>
                         </div>
@@ -192,7 +187,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">HISTORY</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">Sebagai salah satu lembaga pendidikan di Tangerang Selatan, Pondok Pesantren Yatim Al-Hanif telah menjadi pilar penting dalam penyebaran ajaran Islam dan pencetakan generasi ulama sejak 2011.</h3>
                 </div>
                 <ul class="timeline">
                     <li>
@@ -333,15 +328,20 @@
       </div>
     </div>
 
-    <div class="text-center mt-5">
-      <a href="https://docs.google.com/forms/d/e/1FAIpQLSel6VtF3R_mkex7UaCf9sLA9zKMfrS6jGv1-ycJbp69mKalGg/viewform?usp=dialog" target="_blank" class="btn btn-daftar btn-lg">
+    <section id="pendaftaran" class="page-section bg-light">
+  <div class="container">
+    <div class="text-center mb-5">
+      <h2 class="section-heading text-uppercase">Link Pendaftaran Santri Baru</h2>
+      <h3 class="section-subheading text-muted">
+        Pondok Pesantren Yatim Al-Hanif
+      </h3>
+    </div>
+        <div class="text-center mt-5">
+      <a href="login.html" target="_blank" class="btn btn-daftar btn-lg">
         DAFTAR SEKARANG
       </a>
     </div>
-  </div>
 </section>
-
-
         <!-- Clients-->
         <div class="py-5">
             <div class="container">
@@ -447,9 +447,7 @@
     </a>
     </p>
   </div>
-
 </div>
-
             </div>
         </section>
         <!-- Footer-->
@@ -513,7 +511,7 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Pendidikan Tsanawiyah (MTs)</h2>
+                                    <h2 class="text-uppercase">Madrasah Tsanawiyah (MTs)</h2>
                                     <p class="item-intro text-muted">Program pembinaan dan pendidikan santri di Pondok Pesantren Yatim Al-Hanif</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/2.jpg" alt="..." />
                                     <p>Pendidikan Tsanawiyah di Pondok Pesantren Al-Hanif memadukan kurikulum pendidikan menengah pertama dengan penguatan ilmu agama dan karakter Islami.</p>
@@ -546,7 +544,7 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Pendidikan Aliyah (MA)</h2>
+                                    <h2 class="text-uppercase">Madrasah Aliyah (MA)</h2>
                                     <p class="item-intro text-muted">Program pembinaan dan pendidikan santri di Pondok Pesantren Yatim Al-Hanif</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/3.jpg" alt="..." />
                                     <p>Pendidikan Aliyah ditujukan untuk membekali santri dengan ilmu pengetahuan, pemahaman agama yang mendalam, serta kesiapan melanjutkan pendidikan ke jenjang yang lebih tinggi.</p>
