--- a/admin-psya-8f92.html
+++ b/admin-psya-8f92.html
@@ -4,19 +4,86 @@
   <meta charset="UTF-8">
   <title>Admin Pendaftaran</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <style>
+    body {
+      background: #f4f6f8;
+    }
+    .admin-header {
+      background: white;
+      padding: 15px 25px;
+      border-bottom: 1px solid #e0e0e0;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    iframe {
+      border: none;
+      border-radius: 12px;
+    }
+  </style>
 </head>
 
-<body class="bg-light">
-<div class="container py-5">
-  <h3 class="mb-3">📋 Data Pendaftar Santri</h3>
-  <p class="text-muted">Akses hanya untuk admin</p>
+<body class="bg-light d-flex flex-column min-vh-100">
+  <script>
+  if(sessionStorage.getItem("adminLogin") !== "true"){
+    alert("⛔ Akses ditolak. Silakan login sebagai admin.");
+    window.location.href = "login.html";
+  }
+</script>
 
-  <iframe
-    src="https://docs.google.com/spreadsheets/d/1N7cf9RokOadpMwD65EBvUk0MyMS_ESryXUfOlfYyUOw/preview"
-    width="100%" height="700"
-    style="border-radius:12px;">
-  </iframe>
+<!-- PROTEKSI LOGIN -->
+<script>
+if (sessionStorage.getItem("adminLogin") !== "true") {
+  window.location.href = "login.html";
+}
+</script>
+
+<!-- HEADER -->
+ <nav class="navbar navbar-dark bg-dark px-4 d-flex justify-content-between">
+  <span class="navbar-brand">📊 Admin Panel – Data Siswa Al-Hanif</span>
+
+  <div class="d-flex align-items-center gap-3 text-white">
+    <small class="text-warning">👤 Login sebagai: <b>Admin PPDB</b></small>
+    <button class="btn btn-danger btn-sm" onclick="logout()">Logout</button>
+  </div>
+</nav>
+
+
+<!-- CONTENT -->
+<div class="container py-4">
+  <div class="card shadow-sm">
+    <div class="card-body">
+      <p class="text-muted mb-3">Akses khusus admin</p>
+
+      <div class="alert alert-warning mt-4">
+      ⚠️ Data bersifat rahasia. Dilarang menyebarkan tanpa izin pimpinan pondok.
+      </div>
+
+      <iframe
+        src="https://docs.google.com/spreadsheets/d/1N7cf9RokOadpMwD65EBvUk0MyMS_ESryXUfOlfYyUOw/preview"
+        width="100%" height="650">
+      </iframe>
+    </div>
+  </div>
 </div>
+
+<script>
+function logout(){
+  sessionStorage.removeItem("adminLogin");
+  window.location.href = "login.html";
+}
+</script>
+<footer class="text-center text-muted py-3 mt-auto border-top">
+  <small>
+    © 2026 <b>PSB Pondok Pesantren Yatim Al-Hanif</b><br>
+    Sistem Pendaftaran Santri Baru – Akses Admin
+  </small>
+</footer>
+
+
 </body>
 </html>
