update admin dan pembayaran pendaftaran

--- a/pendaftaran.html
+++ b/pendaftaran.html
@@ -87,7 +87,7 @@
       </div>
     </div>
 <!-- google form-->
- <section class="page-section pendaftaran-section">
+ <section class="pendaftaran-section" id="pendaftaran">
   <div class="container">
 
     <div class="text-center mb-5">
@@ -114,15 +114,63 @@
       frameborder="0">
     </iframe>
   </div>
-
+  <div class="form-scroll-hint">
+  <span>⬇ Scroll ke bawah untuk melanjutkan pengisian formulir</span>
+</div>
 </div>
 
 
+ <!-- INFO BIAYA PENDAFTARAN -->
+<section class="container my-2">
+  <div class="biaya-card">
+    <div class="biaya-header">
+      <span class="biaya-icon">⚠️</span>
+      <h4>Informasi Biaya Pendaftaran</h4>
+    </div>
+
+    <div class="biaya-body">
+      <div class="biaya-item">
+        <span>Biaya Pendaftaran</span>
+        <strong>Rp 150.000,-</strong>
+      </div>
+
+      <div class="biaya-item">
+        <span>Pembayaran via Transfer</span>
+        <strong>a/n Sayyidah Hanifatu Dhuha</strong>
+      </div>
+
+      <div class="biaya-item">
+        <span>Bank</span>
+        <strong>BCA Syariah</strong>
+      </div>
+
+      <div class="biaya-rek">
+        <small>No. Rekening</small>
+        <div class="rek-number">0360 0102 76</div>
+      </div>
+
+      <hr>
+
+      <p class="text-center mt-3 mb-3">
+        Konfirmasi transfer dapat dilakukan melalui WhatsApp Admin
+      </p>
+
+      <div class="text-center">
+        <a
+          href="https://wa.me/6285211560165?text=Assalamu’alaikum%20Admin%20PPDB%20Al-Hanif,%20saya%20ingin%20konfirmasi%20pembayaran%20pendaftaran."
+          target="_blank"
+          class="btn-wa"
+        >
+          💬 Hubungi Admin via WhatsApp
+        </a>
+      </div>
+    </div>
   </div>
 </section>
 
+
    <!-- Contact-->
-        <section class="page-section footer-pondok" id="contact">
+        <section class="footer-pondok pt-4 pb-5" id="contact">
             <div class="container">
                 <div class="text-center mb-5">
                     <h2 class="section-heading text-uppercase footer-title">
