--- a/admin-psya-8f92.html
+++ b/admin-psya-8f92.html
@@ -52,6 +52,10 @@ if (sessionStorage.getItem("adminLogin") !== "true") {
   </div>
 </nav>
 
+<small class="text-muted">
+  Status sistem: <span class="text-success">● Online</span>
+</small>
+
 
 <!-- CONTENT -->
 <div class="container py-4">
@@ -62,6 +66,7 @@ if (sessionStorage.getItem("adminLogin") !== "true") {
       <div class="alert alert-warning mt-4">
       ⚠️ Data bersifat rahasia. Dilarang menyebarkan tanpa izin pimpinan pondok.
       </div>
+
         <div class="row mb-4" id="dashboard">
           <div class="col-md-3">
             <div class="card shadow-sm text-center">
@@ -99,10 +104,36 @@ if (sessionStorage.getItem("adminLogin") !== "true") {
             </div>
           </div>
         </div>
-      <iframe
-        src="https://docs.google.com/spreadsheets/d/1UQr8bh1XIxJSbH76HsjvLZDXUHIIcqLbXZR0NhcZjck/preview"
-        width="100%" height="650">
-      </iframe>
+
+        <div style="display:flex; gap:10px; margin-bottom:15px;">
+  <input 
+    type="text" 
+    id="searchInput" 
+    placeholder="Cari nama / NISN / sekolah..."
+    style="flex:1; padding:8px;"
+    onkeyup="applyFilter()"
+  >
+
+  <select id="filterJenjang" onchange="applyFilter()" style="padding:8x;">
+    <option value="">Semua Jenjang</option>
+    <option value="Madrasah Tsanawiyah">Tsanawiyah</option>
+    <option value="Madrasah Aliyah">Aliyah</option>
+  </select>
+</div>
+
+<!-- LOADING -->
+      <div id="loading" class="text-center my-4">
+        <div class="spinner-border text-primary" role="status"></div>
+        <p class="mt-2">Memuat data pendaftar...</p>
+      </div>
+        <!-- TAMPILAN SPREEDSHET -->
+            <div id="dataContainer" style="display:none;">
+        <iframe
+          src="https://docs.google.com/spreadsheets/d/1UQr8bh1XIxJSbH76HsjvLZDXUHIIcqLbXZR0NhcZjck/preview"
+          width="100%" height="650">
+        </iframe>
+      </div>
+
     </div>
   </div>
 </div>
@@ -145,7 +176,13 @@ function logout(){
             document.getElementById("last").innerText =
               data[data.length - 1]["Timestamp"];
           }
+                  // MATIIN LOADING
+        document.getElementById("loading").style.display = "none";
+        document.getElementById("dataContainer").style.display = "block";
         });
+        
       </script>
+
+      <script src="js/scripts.js"></script>
 </body>
 </html>
