update admin dan pendaftaran

--- a/admin-psya-8f92.html
+++ b/admin-psya-8f92.html
@@ -377,7 +377,6 @@ function markPaid(rowNumber) {
 </style>
 
 
-
-      <script src="js/scripts.js"></script>
+<script src="js/admin.js"></script>
 </body>
 </html>
