--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             <i class="fas fa-quran fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Tahfidz</h4>
-                        <p class="text-muted">Program berasramad di bandung dan ingin focus hafalan Quran serta tsaqofah islamiyah. Target hafalan 8 juz dalam 2 tahun.</p>
+                        <p class="text-muted">Program berasrama di bandung dan ingin fokus hafalan Qur'an serta tsaqofah islamiyah. Target hafalan 8 juz dalam 2 tahun.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
