update tata cara pendaftaran

--- a/index.html
+++ b/index.html
@@ -17,6 +17,24 @@
         <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
+        <!-- POPUP FLYER 
+        <div class="modal fade" id="flyerModal" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-lg">
+            <div class="modal-content border-0 rounded-4">
+
+            <button type="button"
+                    class="btn-close position-absolute end-0 m-3"
+                    data-bs-dismiss="modal"
+                    aria-label="Close"></button>
+
+            <img src="assets/img/Background.jpg"
+                class="img-fluid rounded-4"
+                alt="Flyer Pendaftaran">
+
+            </div>
+        </div>
+        </div> -->
+
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
@@ -41,7 +59,7 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">Assalamualaikum Hamba Allah</div>
+                <div class="masthead-subheading">السلام عليكم يا عبد الله</div>
                 <div class="masthead-heading text-uppercase">PONPES YATIM AL-HANIF</div>
                 <a class="btn btn-primary btn-xl text-uppercase" href="#services">TABAYYUN</a>
             </div>
@@ -296,34 +314,34 @@
         <section class="page-section bg-light" id="pendaftaran">
   <div class="container">
     <div class="text-center">
-      <h2 class="section-heading text-uppercase">Alur Pendaftaran Santri</h2>
+      <h2 class="section-heading text-uppercase">Cara Mendaftar</h2>
       <h3 class="section-subheading text-muted">
-        Proses Pendaftaran Pondok Pesantren Yatim Al-Hanif
+        Tata Cara Mendaftar Di Pondok Pesantren Yatim Al-Hanif
       </h3>
     </div>
 
     <div class="row text-center mt-4">
       <div class="col-md-4">
         <div class="alur-box">
-          <i class="fas fa-edit fa-3x mb-3"></i>
-          <h4>Isi Formulir</h4>
-          <p>Calon santri mengisi formulir pendaftaran secara online & offline.</p>
+          <i class="fas fa-arrow-pointer fa-3x mb-3"></i>
+          <h4>Masuk</h4>
+          <p>Klik Tombol Link Pendaftaran yang ada di bawah ini.</p>
         </div>
       </div>
 
       <div class="col-md-4">
         <div class="alur-box">
           <i class="fas fa-check-circle fa-3x mb-3"></i>
-          <h4>Verifikasi Data</h4>
-          <p>Data akan diverifikasi oleh admin pondok.</p>
+          <h4>Login</h4>
+          <p>Dihalaman Login pilih untuk masuk sebagai santri/user.</p>
         </div>
       </div>
 
       <div class="col-md-4">
         <div class="alur-box">
-          <i class="fab fa-whatsapp fa-3x mb-3"></i>
-          <h4>Dihubungi Admin</h4>
-          <p>Admin akan menghubungi melalui WhatsApp.</p>
+          <i class="fas fa-edit fa-3x mb-3"></i>
+          <h4>Isi Data</h4>
+          <p>Setelah itu ikuti tata cara yang berada di halaman pendaftaran.</p>
         </div>
       </div>
     </div>
