--- a/pendaftaran.html
+++ b/pendaftaran.html
@@ -49,37 +49,32 @@
         </nav>
 <!-- Alur Pendaftaran-->
 
-        <section class="page-section bg-light" id="pendaftaran">
-  <div class="container">
-    <div class="text-center">
-      <h2 class="section-heading text-uppercase">Alur Pendaftaran Santri</h2>
-      <h3 class="section-subheading text-muted">
-        Proses Pendaftaran Pondok Pesantren Yatim Al-Hanif
-      </h3>
-    </div>
+         <section class="page-section bg-light" id="team"> <div class="container"> <div class="text-center"> 
+            <h2 class="section-heading text-uppercase">Alur Pendaftaran Santri</h2> 
+            <h3 class="section-subheading text-muted">Proses Pendaftaran Pondok Pesantren Yatim Al-Hanif</h3>
 
     <div class="row text-center mt-4">
       <div class="col-md-4">
         <div class="alur-box">
           <i class="fas fa-edit fa-3x mb-3"></i>
           <h4>Isi Formulir</h4>
-          <p>Calon santri mengisi formulir pendaftaran secara online & offline.</p>
+          <p>Calon santri baru harus mengisi Data Santri dan Orang Tua di formulir pendaftaran di bawah ini secara lengkap.</p>
         </div>
       </div>
 
       <div class="col-md-4">
         <div class="alur-box">
           <i class="fas fa-check-circle fa-3x mb-3"></i>
-          <h4>Verifikasi Data</h4>
-          <p>Data akan diverifikasi oleh admin pondok.</p>
+          <h4>Bayar Biaya Pendaftaran</h4>
+          <p>Silahkan melakukan pembayaran untuk biaya pendaftaran yang tertera di bawah formulir pendaftaran.</p>
         </div>
       </div>
 
       <div class="col-md-4">
         <div class="alur-box">
           <i class="fab fa-whatsapp fa-3x mb-3"></i>
-          <h4>Dihubungi Admin</h4>
-          <p>Admin akan menghubungi melalui WhatsApp.</p>
+          <h4>Verifikasi Admin</h4>
+          <p>Silahkan hubungi admin untuk konfirmasi pembayaran melalui WhatsApp dan Data akan di verifikasi oleh Admin</p>
         </div>
       </div>
     </div>
@@ -175,9 +170,8 @@
   </div>
 </section>
 
-
-   <!-- Contact-->
-        <section class="footer-pondok pt-4 pb-5" id="contact">
+<!-- Contact-->
+        <section class="page-section footer-pondok" id="contact">
             <div class="container">
                 <div class="text-center mb-5">
                     <h2 class="section-heading text-uppercase footer-title">
