update link icon

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             </div>
         </section>
         <!-- Portfolio Grid-->
-        <section class="page-section bg-light" id="portfolio">
+        <section class="page-section bg-light" id="program">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">PROGRAM UNGGULAN</h2>
@@ -448,7 +448,7 @@
       <li><a href="#pendaftaran" class="footer-link">Pendaftaran</a></li>
       <li><a href="#program" class="footer-link">Program</a></li>
       <li><a href="#team" class="footer-link">Struktur</a></li>
-      <li><a href="#contact" class="footer-link">Kontak</a></li>
+      <li><a href="#services" class="footer-link">Tentang</a></li>
     </ul>
   </div>
 
@@ -474,9 +474,9 @@
                 <div class="row align-items-center">
                     <div class="col-lg-4 text-lg-start">Copyright &copy; 2026 Pondok Pesantren Yatim Al-Hanif</div>
                     <div class="col-lg-4 my-3 my-lg-0">
-                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="https://www.tiktok.com/@alhanif_.official" aria-label="Tiktok"><i class="fab fa-tiktok"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/ustahmad.jazuli" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="https://www.youtube.com/@AhmadJazuli01" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
                     </div>
                     <div class="col-lg-4 text-lg-end">
                         <a class="link-dark text-decoration-none me-3" href="#!">Privacy Policy</a>
