--- a/pendaftaran.html
+++ b/pendaftaran.html
@@ -49,7 +49,7 @@
         </nav>
 <!-- Alur Pendaftaran-->
 
-         <section class="page-section bg-light" id="team"> <div class="container"> <div class="text-center"> 
+         <section class="page-section bg-light" id="Alur"> <div class="container"> <div class="text-center"> 
             <h2 class="section-heading text-uppercase">Alur Pendaftaran Santri</h2> 
             <h3 class="section-subheading text-muted">Proses Pendaftaran Pondok Pesantren Yatim Al-Hanif</h3>
 
@@ -123,8 +123,8 @@
 
 
  <!-- INFO BIAYA PENDAFTARAN -->
-<section class="container my-2">
-  <div class="biaya-card">
+<section class="container my-2" id="pembayaran"> 
+  <div class="biaya-card"> 
     <div class="biaya-header">
       <span class="biaya-icon">⚠️</span>
       <h4>Informasi Biaya Pendaftaran</h4>
@@ -159,7 +159,7 @@
 
       <div class="text-center">
         <a
-          href="https://wa.me/6285211560165?text=Assalamu’alaikum%20Admin%20PPDB%20Al-Hanif,%20saya%20ingin%20konfirmasi%20pembayaran%20pendaftaran."
+          href="https://wa.me/6285211560165?text=Assalamu’alaikum%20Admin%20PPDB%20Al-Hanif,%20saya%20ingin%20mengkonfirmasi%20pembayaran%20pendaftaran%20Santri."
           target="_blank"
           class="btn-wa"
         >
@@ -235,10 +235,10 @@
   <div class="col-lg-3 col-md-6 mb-4">
     <h5 class="text-uppercase mb-3">Informasi</h5>
     <ul class="list-unstyled">
-      <li><a href="#pendaftaran" class="footer-link">Pendaftaran</a></li>
-      <li><a href="#program" class="footer-link">Program</a></li>
-      <li><a href="#team" class="footer-link">Struktur</a></li>
-      <li><a href="#contact" class="footer-link">Kontak</a></li>
+      <li><a href="#Alur" class="footer-link">Alur Pendaftaran</a></li>
+      <li><a href="#pendaftaran" class="footer-link">Formulir</a></li>
+      <li><a href="#pembayaran" class="footer-link">Pembayaran</a></li>
+      <!-- <li><a href="#contact" class="footer-link">Kontak</a></li> -->
     </ul>
   </div>
 
@@ -264,9 +264,9 @@
                 <div class="row align-items-center">
                     <div class="col-lg-4 text-lg-start">Copyright &copy; 2026 Pondok Pesantren Yatim Al-Hanif</div>
                     <div class="col-lg-4 my-3 my-lg-0">
-                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="https://www.tiktok.com/@alhanif_.official" aria-label="Tiktok"><i class="fab fa-tiktok"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/ustahmad.jazuli" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="https://www.youtube.com/@AhmadJazuli01" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
                     </div>
                     <div class="col-lg-4 text-lg-end">
                         <a class="link-dark text-decoration-none me-3" href="#!">Privacy Policy</a>
