--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
-        <!-- POPUP FLYER 
+        <!-- POPUP FLYER -->
         <div class="modal fade" id="flyerModal" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-lg">
             <div class="modal-content border-0 rounded-4">
@@ -27,13 +27,13 @@
                     data-bs-dismiss="modal"
                     aria-label="Close"></button>
 
-            <img src="assets/img/Background.jpg"
+            <img src="assets/img/ppdb.jpeg"
                 class="img-fluid rounded-4"
                 alt="Flyer Pendaftaran">
 
             </div>
         </div>
-        </div> -->
+        </div>
 
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
